Rename the load flag LOAD_DISABLE_CONNECTION_MIGRATION_TO_CELLULAR to LOAD_DISABLE_CONNECTION_MIGRATION_TO_CELLULAR.

This CL does not change the behavior of the flag, it merely renames the flag to reflect the semantics we would like it to have. A subsequent CL will make the behavior changes.

Bug: 769526
Cq-Include-Trybots: master.tryserver.chromium.android:android_cronet_tester;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I6261e60fb44661a9b3de944e8f87bd660caeb761
Reviewed-on: https://chromium-review.googlesource.com/1136972
Commit-Queue: Zhongyi Shi <zhongyi@chromium.org>
Reviewed-by: Ryan Hamilton <rch@chromium.org>
Reviewed-by: Misha Efimov <mef@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575914}
Former-commit-id: bb28b1fecc57d07994d4d46d615de39e76267a1e