net/base/load_flags_list.h
@@ -85,9 +85,9 @@ LOAD_FLAG(MAYBE_USER_GESTURE, 1 << 14)
 // be honored, but that other forms of authority may be used.
 LOAD_FLAG(DO_NOT_USE_EMBEDDED_IDENTITY, 1 << 15)
 
-// Indicates that this request is not to be migrated to a new network when QUIC
-// connection migration is enabled.
-LOAD_FLAG(DISABLE_CONNECTION_MIGRATION, 1 << 16)
+// Indicates that this request is not to be migrated to a cellular network when
+// QUIC connection migration is enabled.
+LOAD_FLAG(DISABLE_CONNECTION_MIGRATION_TO_CELLULAR, 1 << 16)
 
 // Indicates that the cache should not check that the request matches the
 // response's vary header.
